--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <span><a href="#mission">Mission</a></span>
         <span><a href="#featuredtea">Featured Tea</a></span>
-        <span><a href="#location">Locations</a></span>
+        <span><a href="#locations">Locations</a></span>
       </nav>
     </header>
     <div class="main">
@@ -47,6 +47,39 @@
           <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
           <h4>Bedford Bizarre Tea</h4>
         </div>
+      </div>
+      <div class="locations" id='locations'>
+        <div class="title">
+          <h2>Locations</h2>
+        </div>
+        <div class="address_box">
+          <div class="address">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="address">
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+          </div>
+          <div class="address">
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex-container bottom">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8902</h5>
+      </div>
+      <div class="flex-container footer">
+        <h4>copyright The Tea Cozy 2017</h4>
       </div>
     </div>
 
